--- a/analytics-service/requirements.txt
+++ b/analytics-service/requirements.txt
@@ -1,6 +1,5 @@
-fastapi>=0.115.0
-uvicorn[standard]>=0.34.0
-pymongo>=4.10.0
-python-dotenv>=1.0.0
-pydantic>=2.10.0
-python-jose[cryptography]>=3.3.0
+fastapi==0.103.1
+uvicorn==0.23.2
+pymongo==4.5.0
+python-dotenv==1.0.0
+gunicorn==21.2.0
